--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "ogl": "^0.0.40",
+    "particles.js": "^2.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-particles-js": "^2.7.1",
     "react-scripts": "3.4.0"
   },
   "scripts": {
